--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -8,6 +8,7 @@
 <body>
     <div class="main-content">
         {{>header}}
+        <p>Use this to get your weather.</p>
         <form>
             <input placeholder="Location">
             <button>Submit</button>
