--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -13,6 +13,7 @@
             <input placeholder="Location">
             <button>Submit</button>
         </form>
+        <p id="message-2"></p>
         <p id="message-1"></p>
     </div>
     {{>footer}}
